<resources>
    <string name="app_name">ProyectoFinal</string>
    <string name="bottom_nav_inicio">Inicio</string>
    <string name="bottom_nav_buscar">Buscar</string>
    <string name="bottom_nav_categorias">Categorias</string>
    <string name="bottom_nav_carrito">Carrito</string>
    <string name="bottom_nav_perfil">Cuenta</string>
    <string name="email">EMAIL</string>
    <string name="enter_email_address"> Introduce tu correo</string>
    <string name="password">CONTRASEÑA</string>
    <string name="password_hint">Introduce tu contraseña</string>
    <string name="recordame">Recordarme</string>
    <string name="login_text">Iniciar Sesión</string>
    <string name="aviso_cuenta">¿Aún no tienes una cuenta?</string>
    <string name="crear_cuenta">CREAR UNA CUENTA</string>
    <string name="password_box" />
    <string name="forget_password">¿Olvidaste tu contraseña?</string>
    <string name="nombre_y_apellidos">NOMBRE COMPLETO</string>
    <string name="introduce_tu_nombre">Introduce tu nombre</string>
    <string name="introduce_tu_contrase_a">Introduce tu contraseña</string>
    <string name="confirmar_contrase_a">CONFIRMAR CONTRASEÑA</string>
    <string name="introduce_tu_direcci_n">Introduce tu dirección</string>
    <string name="introduce_tu_contrase_a_de_nuevo">Introduce otra vez tu contraseña</string>
    <string name="registrarse">REGISTRARSE</string>
    <string name="contrase_a">CONTRASEÑA</string>
    <string name="introduce_el_correo">Introduce el correo</string>
    <string name="e_mail">E-MAIL</string>
    <string name="n_mero_de_telefono">NÚMERO DE TELEFONO</string>
    <string name="introduce_tu_n_mero_de_tel_fono">Introduce tu número de teléfono</string>
    <string name="string_precio">%1$s€</string>
    <string name="title_activity_product"></string>
    <string name="apple_macbook_air_core_i5_5th_gen">Apple MacBook Air Core i5 5th Gen</string>
    <string name="precio">Precio</string>
    <string name="imagen_del_producto">Imagen del Producto</string>
    <string name="password_minus">Contraseña</string>
    <string name="correo_minus">Correo electrónico</string>
    <string name="l_nea_de_direcci_n_adicional_opcional">Línea de dirección adicional (opcional)</string>
    <string name="direcci_n_calle_y_n_mero">Dirección (calle y número)</string>
    <string name="apellidos">Apellidos</string>
    <string name="planta_bloque_escalera_puerta_etc">Planta, bloque, escalera, puerta, etc.</string>
    <string name="cp">CP</string>
    <string name="n_mero_de_tel_fono">Número de teléfono</string>
    <string name="pa_s">País</string>
    <string name="hecho">Hecho</string>
    <string name="nombre">Nombre</string>
    <string name="ciudad">Ciudad</string>
    <string name="disponibilidad_producto">disponibilidad_producto</string>
    <string name="envio_producto">envio_producto</string>
    <string name="env_o">Envío</string>
    <string name="marca_producto">marca_producto</string>
    <string name="marca">Marca</string>
    <string name="nombre_producto">Nombre Producto</string>
    <string name="tipocategoria">TipoCategoria</string>
    <string name="categorias"><![CDATA[Categorias >]]></string>
    <string name="disponibilidad">Disponibilidad</string>
    <string name="descripci_n">Descripción</string>
    <string name="descripcion_producto">descripcion_producto</string>
    <string name="caracter_sticas">Características</string>
    <string name="caracteristicas_producto">caracteristicas_producto</string>
    <string name="valoraci_n">Valoración</string>
    <string name="a_adir_a_la_cesta">Añadir a la cesta</string>
    <string name="todo">TODO</string>
    <string name="recomendaciones_destacadas">Recomendaciones destacadas</string>
    <string name="minus_sign">-</string>
    <string name="plus_sign">+</string>
    <string name="apple_macbook_air_core_i5_5th_gen_8_gb">Apple MacBook Air Core i5 5th Gen - (8 GB)</string>
    <string name="Unidades_default">1</string>
    <string name="x">X</string>
    <string name="ya_tengo_una_cuenta">Ya tengo una cuenta</string>
    <string name="realizar_compra_como_invitado">Realizar compra como invitado</string>
    <string name="correo_electr_nico">Correo electrónico</string>
    <string name="continuar_como_invitado">CONTINUAR COMO INVITADO</string>
    <string name="podr_s_observar_el_estado_del_pedido_a_trav_s_del_correo_electr_nico">Podrás observar el estado del pedido a través del correo electrónico</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="introduce_tu_correo">Introduce tu correo</string>
    <string name="introduce_tu_c_digo_postal">Introduce tu código postal</string>
    <string name="imagen_del_producto_">Imagen del producto</string>
    <string name="no_hay_art_culos_en_la_cesta">No hay artículos en la cesta</string>
    <string name="seguir_comprando">SEGUIR COMPRANDO</string>
    <string name="realizar_pedido">REALIZAR PEDIDO</string>
    <string name="ir_a_comprar">IR A COMPRAR</string>
    <string name="envio">Envio</string>
    <string name="precio_envio">precio_envio</string>
    <string name="b_squeda_de_productos">Búsqueda de productos</string>
    <string name="a_adir_una_unidad">Añadir una unidad</string>
    <string name="eliminar_producto_de_la_cesta">Eliminar producto de la cesta</string>
    <string name="restar_una_unidad">Restar una unidad</string>
    <string name="transferencia_bancaria">Transferencia Bancaria</string>
    <string name="tarjeta_de_cr_dito_d_bito">Tarjeta de crédito / débito</string>
    <string name="m_todo_de_pago">Método de pago</string>
    <string name="correo_eletronico">Correo eletronico</string>
    <string name="pagar_ahora">PAGAR AHORA</string>
    <string name="numero_de_telefono">Numero de telefono</string>
    <string name="codigo_postal">Codigo postal</string>
    <string name="direccion2">Direccion2</string>
    <string name="direcci_n_de_env_o">Dirección de Envío</string>
    <string name="env_o_en_3_5_dias_laborales">Envío en 3-5 dias laborales</string>
    <string name="precio_subtotal">precio_subtotal</string>
    <string name="total">Total</string>
    <string name="subtotal">Subtotal</string>

</resources>
